--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0"
   }
 }
